WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
114655
Composited layer that painted into composited ancestor is not repainted after moving
https://bugs.webkit.org/show_bug.cgi?id=114655
Summary
Composited layer that painted into composited ancestor is not repainted after...
Hurnjoo Lee
Reported
2013-04-15 19:07:53 PDT
Composited layer that painted into composited ancestor is not repainted after moving.
Attachments
Test case
(797 bytes, text/html)
2013-04-15 19:17 PDT
,
Hurnjoo Lee
no flags
Details
patch
(3.52 KB, patch)
2013-04-19 01:20 PDT
,
Hurnjoo Lee
simon.fraser
: review-
simon.fraser
: commit-queue-
Details
Formatted Diff
Diff
patch
(4.30 KB, patch)
2013-04-24 01:41 PDT
,
Hurnjoo Lee
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-ews-06 for mac-mountainlion
(527.18 KB, application/zip)
2013-04-24 04:47 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from webkit-ews-16 for mac-mountainlion-wk2
(964.62 KB, application/zip)
2013-04-24 06:13 PDT
,
Build Bot
no flags
Details
updated patch for the ews.
(4.16 KB, patch)
2013-04-24 19:03 PDT
,
Hurnjoo Lee
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-ews-01 for mac-mountainlion
(496.78 KB, application/zip)
2013-04-25 02:18 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from webkit-ews-03 for mac-mountainlion
(548.64 KB, application/zip)
2013-04-25 02:41 PDT
,
Build Bot
no flags
Details
Add a text repaint test instead of ref test
(4.80 KB, patch)
2013-04-28 23:17 PDT
,
Hurnjoo Lee
no flags
Details
Formatted Diff
Diff
Patch
(5.16 KB, patch)
2013-10-07 21:40 PDT
,
Hurnjoo Lee
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Hurnjoo Lee
Comment 1
2013-04-15 19:17:58 PDT
Created
attachment 198217
[details]
Test case
Simon Fraser (smfr)
Comment 2
2013-04-18 11:21:11 PDT
Does this affect any real-world site?
Radar WebKit Bug Importer
Comment 3
2013-04-18 11:21:47 PDT
<
rdar://problem/13685897
>
Hurnjoo Lee
Comment 4
2013-04-18 23:33:31 PDT
(In reply to
comment #1
)
> Created an attachment (id=198217) [details] > Test case
(In reply to
comment #2
)
> Does this affect any real-world site?
No, this bug was found when making other testcase.
Hurnjoo Lee
Comment 5
2013-04-19 01:20:51 PDT
Created
attachment 198823
[details]
patch
Simon Fraser (smfr)
Comment 6
2013-04-19 09:00:28 PDT
Comment on
attachment 198823
[details]
patch The change looks good, but you should be able to make a LayoutTest as a repaint test or a ref test.
Hurnjoo Lee
Comment 7
2013-04-24 01:41:45 PDT
Created
attachment 199404
[details]
patch add a ref test.
Hurnjoo Lee
Comment 8
2013-04-24 01:55:26 PDT
(In reply to
comment #6
)
> (From update of
attachment 198823
[details]
) > The change looks good, but you should be able to make a LayoutTest as a repaint test or a ref test.
Sorry for the delay. I made a ref-test instead of a manual test.
Build Bot
Comment 9
2013-04-24 04:47:17 PDT
Comment on
attachment 199404
[details]
patch
Attachment 199404
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.appspot.com/results/214098
New failing tests: compositing/repaint/absolute-painted-into-composited-ancestor.html
Build Bot
Comment 10
2013-04-24 04:47:18 PDT
Created
attachment 199414
[details]
Archive of layout-test-results from webkit-ews-06 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-06 Port: mac-mountainlion Platform: Mac OS X 10.8.2
Build Bot
Comment 11
2013-04-24 06:13:48 PDT
Comment on
attachment 199404
[details]
patch
Attachment 199404
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/210079
New failing tests: compositing/repaint/absolute-painted-into-composited-ancestor.html fast/repaint/japanese-rl-selection-repaint-in-regions.html
Build Bot
Comment 12
2013-04-24 06:13:49 PDT
Created
attachment 199420
[details]
Archive of layout-test-results from webkit-ews-16 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-16 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.2
Simon Fraser (smfr)
Comment 13
2013-04-24 09:15:09 PDT
Comment on
attachment 199404
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=199404&action=review
r+ but please improve the test and investigate the EWS failures.
> LayoutTests/compositing/repaint/absolute-painted-into-composited-ancestor.html:27 > + function doTest() { > + setTimeout(function() { > + moveBox(); > + }, 100);
100ms is a very long timeout for a test; you should be able to use 10 or less.
Hurnjoo Lee
Comment 14
2013-04-24 19:03:58 PDT
Created
attachment 199593
[details]
updated patch for the ews.
Hurnjoo Lee
Comment 15
2013-04-25 02:10:37 PDT
(In reply to
comment #13
) Thanks for the review.
> (From update of
attachment 199404
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=199404&action=review
> > r+ but please improve the test and investigate the EWS failures.
EWS failures are still remaining. I am investigating it.
> > > LayoutTests/compositing/repaint/absolute-painted-into-composited-ancestor.html:27 > > + function doTest() { > > + setTimeout(function() { > > + moveBox(); > > + }, 100); > > 100ms is a very long timeout for a test; you should be able to use 10 or less.
Done.
Build Bot
Comment 16
2013-04-25 02:18:40 PDT
Comment on
attachment 199593
[details]
updated patch for the ews.
Attachment 199593
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.appspot.com/results/228005
New failing tests: compositing/repaint/absolute-painted-into-composited-ancestor.html
Build Bot
Comment 17
2013-04-25 02:18:42 PDT
Created
attachment 199639
[details]
Archive of layout-test-results from webkit-ews-01 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-01 Port: mac-mountainlion Platform: Mac OS X 10.8.2
Build Bot
Comment 18
2013-04-25 02:41:56 PDT
Comment on
attachment 199593
[details]
updated patch for the ews.
Attachment 199593
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.appspot.com/results/171270
New failing tests: compositing/repaint/absolute-painted-into-composited-ancestor.html
Build Bot
Comment 19
2013-04-25 02:41:58 PDT
Created
attachment 199642
[details]
Archive of layout-test-results from webkit-ews-03 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-03 Port: mac-mountainlion Platform: Mac OS X 10.8.2
Hurnjoo Lee
Comment 20
2013-04-28 23:17:35 PDT
Created
attachment 199985
[details]
Add a text repaint test instead of ref test
Hurnjoo Lee
Comment 21
2013-04-28 23:46:43 PDT
(In reply to
comment #15
)
> (In reply to
comment #13
) > > Thanks for the review. > > > (From update of
attachment 199404
[details]
[details]) > > View in context:
https://bugs.webkit.org/attachment.cgi?id=199404&action=review
> > > > r+ but please improve the test and investigate the EWS failures. > EWS failures are still remaining. I am investigating it. > > > > > > LayoutTests/compositing/repaint/absolute-painted-into-composited-ancestor.html:27 > > > + function doTest() { > > > + setTimeout(function() { > > > + moveBox(); > > > + }, 100); > > > > 100ms is a very long timeout for a test; you should be able to use 10 or less. > Done.
The ref-test was not working correctly in MAC-WK1, so I added a text repaint test instead of the ref-test.
Simon Fraser (smfr)
Comment 22
2013-10-07 12:03:08 PDT
Comment on
attachment 199985
[details]
Add a text repaint test instead of ref test View in context:
https://bugs.webkit.org/attachment.cgi?id=199985&action=review
> LayoutTests/ChangeLog:8 > + Add a text repait test to check the repainting of composited layer
"repait"
Hurnjoo Lee
Comment 23
2013-10-07 21:40:08 PDT
Created
attachment 213651
[details]
Patch
Hurnjoo Lee
Comment 24
2013-10-07 21:52:18 PDT
(In reply to
comment #22
)
> (From update of
attachment 199985
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=199985&action=review
> > > LayoutTests/ChangeLog:8 > > + Add a text repait test to check the repainting of composited layer > > "repait"
Fixed. I'm sorry, r+ was canceled by my mistake. Could you please give r+ again?
WebKit Commit Bot
Comment 25
2013-10-08 08:54:51 PDT
Comment on
attachment 213651
[details]
Patch Clearing flags on attachment: 213651 Committed
r157108
: <
http://trac.webkit.org/changeset/157108
>
WebKit Commit Bot
Comment 26
2013-10-08 08:54:55 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug